<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_app">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/welcomeImage"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:src="@drawable/background_app_image_nobg"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk_daftar"
            style="@style/Text.Display.XSmall"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
            android:layout_marginTop="96dp"/>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/welcome_text"
            android:textSize="14sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWelcomeLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="24dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/dark_blue"
            android:backgroundTint="@color/bgcolor2"
            android:text="@string/masuk"
            style="@style/Text.Display.XSmall"
            android:textColor="@color/dark_blue" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWelcomeRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnWelcomeLogin"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/daftar"
            style="@style/Text.Display.XSmall"
            android:textColor="@color/white"
            android:backgroundTint="@color/dark_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>